--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-vertical navbar-expand-md navbar-light bg-white" id="sidenav-main">
   <div class="container-fluid">
+
     <!-- Toggler -->
-    <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
-       aria-controls="sidenav-collapse-main">
+    <!-- <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed" aria-controls="sidenav-collapse-main">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Brand -->
+    </button> -->
+
+    <!-- Logo -->
     <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
       <img src="./assets/img/brand/red.png" class="navbar-brand-img" alt="...">
     </a>
+
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
       <li class="nav-item" ngbDropdown placement="bottom-right">
@@ -58,8 +60,10 @@
         </div>
       </li>
     </ul>
+
     <!-- Collapse -->
     <div class="collapse navbar-collapse"  [ngbCollapse]="isCollapsed" id="sidenav-collapse-main">
+
       <!-- Collapse header -->
       <div class="navbar-collapse-header d-md-none">
         <div class="row">
@@ -76,6 +80,7 @@
           </div>
         </div>
       </div>
+
       <!-- Form -->
       <form class="mt-4 mb-3 d-md-none">
         <div class="input-group input-group-rounded input-group-merge">
@@ -87,6 +92,7 @@
           </div>
         </div>
       </form>
+
       <!-- Navigation -->
       <ul class="navbar-nav">
           <li *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
@@ -96,10 +102,13 @@
               </a>
           </li>
       </ul>
+
       <!-- Divider -->
       <hr class="my-3">
+
       <!-- Heading -->
       <h6 class="navbar-heading text-muted">Documentation</h6>
+
       <!-- Navigation -->
       <ul class="navbar-nav mb-md-3">
         <li class="nav-item">
