--- a/src/app/modules/admin-module/dashboard/dashboard.component.html
+++ b/src/app/modules/admin-module/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+<div class="header bg-gradient-info pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
@@ -92,14 +92,18 @@
   </div>
 </div>
 <div class="container-fluid mt--7">
+
+  <!-- Charts -->
   <div class="row">
+    <!-- Chart Completed Task -->
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card bg-gradient-default shadow">
+        <!-- Charts content -->
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
               <h6 class="text-uppercase text-light ls-1 mb-1">Overview</h6>
-              <h2 class="text-white mb-0">Sales value</h2>
+              <h2 class="text-white mb-0">Task completed</h2>
             </div>
             <div class="col">
               <ul class="nav nav-pills justify-content-end">
@@ -128,13 +132,16 @@
         </div>
       </div>
     </div>
+
+    <!-- Chart Created Task -->
     <div class="col-xl-4">
       <div class="card shadow">
+        <!-- Chart content -->
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
               <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-              <h2 class="mb-0">Total orders</h2>
+              <h2 class="mb-0">Tasks created</h2>
             </div>
           </div>
         </div>
@@ -147,13 +154,15 @@
       </div>
     </div>
   </div>
+
+  <!-- Tables -->
   <div class="row mt-5">
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="card-header border-0">
           <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Page visits</h3>
+              <h3 class="mb-0">Categories</h3>
             </div>
             <div class="col text-right">
               <a href="#!" class="btn btn-sm btn-primary">See all</a>
@@ -165,10 +174,10 @@
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
-                <th scope="col">Page name</th>
-                <th scope="col">Visitors</th>
-                <th scope="col">Unique users</th>
-                <th scope="col">Bounce rate</th>
+                <th scope="col">Name</th>
+                <th scope="col">Total</th>
+                <th scope="col">Completed</th>
+                <th scope="col">% Completion</th>
               </tr>
             </thead>
             <tbody>
@@ -188,58 +197,16 @@
               </tr>
               <tr>
                 <th scope="row">
-                  /argon/index.html
+                  /argon/
                 </th>
                 <td>
-                  3,985
+                  4,569
                 </td>
                 <td>
-                  319
+                  340
                 </td>
                 <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 46,53%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/charts.html
-                </th>
-                <td>
-                  3,513
-                </td>
-                <td>
-                  294
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 36,49%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/tables.html
-                </th>
-                <td>
-                  2,050
-                </td>
-                <td>
-                  147
-                </td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> 50,87%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/profile.html
-                </th>
-                <td>
-                  1,795
-                </td>
-                <td>
-                  190
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-danger mr-3"></i> 46,53%
+                  <i class="fas fa-arrow-down text-danger mr-3"></i> 40,00%
                 </td>
               </tr>
             </tbody>
@@ -252,7 +219,7 @@
         <div class="card-header border-0">
           <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Social traffic</h3>
+              <h3 class="mb-0">Top users</h3>
             </div>
             <div class="col text-right">
               <a href="#!" class="btn btn-sm btn-primary">See all</a>
@@ -264,15 +231,15 @@
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
-                <th scope="col">Referral</th>
-                <th scope="col">Visitors</th>
-                <th scope="col"></th>
+                <th scope="col">Name</th>
+                <th scope="col">Asigned</th>
+                <th scope="col">% Completion</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">
-                  Facebook
+                  Ender
                 </th>
                 <td>
                   1,480
@@ -282,7 +249,7 @@
                     <span class="mr-2">60%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                        <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                       </div>
                     </div>
                   </div>
@@ -290,7 +257,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                  Facebook
+                  Rigobelto
                 </th>
                 <td>
                   5,480
@@ -301,60 +268,6 @@
                     <div>
                       <div class="progress">
                         <div class="progress-bar bg-gradient-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Google
-                </th>
-                <td>
-                  4,807
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">80%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Instagram
-                </th>
-                <td>
-                  3,678
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">75%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  twitter
-                </th>
-                <td>
-                  2,645
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">30%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-warning" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
                       </div>
                     </div>
                   </div>
