--- a/docs/ender.css
+++ b/docs/ender.css
@@ -1,20 +1,6 @@
-/*!
-
-=========================================================
-* Argon Dashboard - v1.4.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
-* Copyright 2018 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-*/
+/* ========================================================= */
+/* Ender Template Angular - v1.0.0
+/* ========================================================= */
 :root
 {
     --blue: #5e72e4;
@@ -18267,10 +18253,6 @@ textarea[resize='horizontal']
 {
     font-size: 4.25rem;
 }
-.icon-xl + .icon-text
-{
-    width: calc(100% - $icon-size-xl - 1);
-}
 
 .icon-lg
 {
@@ -18282,10 +18264,6 @@ textarea[resize='horizontal']
 {
     font-size: 3.25rem;
 }
-.icon-lg + .icon-text
-{
-    width: calc(100% - $icon-size-lg - 1);
-}
 
 .icon-sm
 {
@@ -18296,10 +18274,6 @@ textarea[resize='horizontal']
 .icon-sm svg
 {
     font-size: 1.25rem;
-}
-.icon-sm + .icon-text
-{
-    width: calc(100% - $icon-size-sm - 1);
 }
 
 .icon-shape
