--- a/src/app/modules/admin-module/admin-layout.component.html
+++ b/src/app/modules/admin-module/admin-layout.component.html
@@ -3,7 +3,7 @@
 <div class="main-content">
   <!-- Top navbar -->
   <app-navbar></app-navbar>
-  <!-- Pages -->
+  <!-- Modules -->
   <router-outlet></router-outlet>
   <div class="container-fluid">
     <app-footer></app-footer>
