select input added

--- a/src/app/modules/configuration-module/user-profile/user-profile.component.html
+++ b/src/app/modules/configuration-module/user-profile/user-profile.component.html
@@ -126,6 +126,38 @@
                     <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
                   </div>
                 </div>
+                <!-- Status -->
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-select">Status</label>
+                    <select id="input-select" class="form-control form-control-alternative" placeholder="Home Address">
+                      <option value="1">Backlog</option>
+                      <option value="2">In course</option>
+                      <option value="3">Closed</option>
+                    </select>
+                  </div>
+                </div>
+                <!-- Category -->
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-select">Category</label>
+                    <select id="input-select" class="form-control form-control-alternative" placeholder="Home Address">
+                      <option value="1">Design</option>
+                      <option value="2">Frontend</option>
+                      <option value="3">API</option>
+                    </select>
+                  </div>
+                </div>
+                <!-- Type -->
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-select">Type</label>
+                    <select id="input-select" class="form-control form-control-alternative" placeholder="Home Address">
+                      <option value="1">High priority</option>
+                      <option value="2">Normal</option>
+                    </select>
+                  </div>
+                </div>
               </div>
               <div class="row">
                 <div class="col-lg-4">
