--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
 
     <!-- Logo -->
     <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
-      <img src="./assets/img/brand/red.png" class="navbar-brand-img" alt="...">
+      <img src="./assets/img/brand/nuva-blue.png" class="navbar-brand-img" alt="Nuva">
     </a>
 
     <!-- User -->
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a  routerLinkActive="active" [routerLink]="['/dashboard']">
-              <img src="./assets/img/brand/blue.png">
+              <img src="./assets/img/brand/nuva-blue.png" alt="Nuva">
             </a>
           </div>
           <div class="col-6 collapse-close">
