--- a/src/app/modules/admin-module/admin-layout.component.html
+++ b/src/app/modules/admin-module/admin-layout.component.html
@@ -5,6 +5,7 @@
   <app-navbar></app-navbar>
   <!-- Modules -->
   <router-outlet></router-outlet>
+  <!-- Footer -->
   <div class="container-fluid">
     <app-footer></app-footer>
   </div>
